--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "d3": "^7.9.0",
     "lucide-react": "^0.536.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-joyride": "^2.9.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
