--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "@dfinity/identity": "^2.0.0",
   "@dfinity/ledger-icp": "^2.6.13",
   "@dfinity/principal": "^2.0.0",
+  "@dfinity/utils": "^2.0.0",
     "d3": "^7.9.0",
     "js-sha256": "^0.11.1",
     "lucide-react": "^0.536.0",
